# academy-management-system

./: .env.example  .gitignore  README.md  check_db.js  cron.js  firebase.json  package-lock.json  package.json  render.yaml  server.js  supabase_migrations.sql  test-services.js
.firebase/: hosting.cHVibGlj.cache
database/: db.js  migrations.sql  seed_gateways.js  supabase.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
middleware/: auth.js
public/: change-password.html  checkout.html  gallery.html  index.html  login.html  manifest.json  privacy.html  registration-v2.html  registration.html  sw.js  terms.html  version.txt
public/admin/: attendance.html  branding.html  calendar.html  dashboard.html  face-manager.html  gateways.html  leave.html  location-logs.html  registrations.html  salary.html  settings.html  students.html  teachers.html  visitors.html  workers.html
public/css/: animations.css  components.css  design-system.css
public/js/: admin.js  api.js  face-auth.js  firebase-config.js  idle-tracker.js  pwa.js
public/student/: checkout.html  dashboard.html
public/teacher/: dashboard.html
public/visitor/: checkin.html
public/worker/: dashboard.html
routes/: analytics.js  attendance.js  auth.js  dashboard.js  import_export.js  leave.js  notifications.js  payments.js  registrations.js  salary.js  settings.js  timetable.js  users.js  visitors.js
scripts/: downloadModels.js  show_supabase_sql.js
services/: email.service.js  encryption.js  fcm.service.js  index.js  storage.service.js
