[package]
name = "academy-management-system"
version = "1.0.0"
description = "Academy Management System Desktop Wrapper"
authors = ["ClickTake Technologies"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }

[features]
# by default Tauri runs in the "embedded-server" mode
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
